fix(forge16/20): prevent getLore adding empty tags to itemstacks